# lab

./: README.md  orbitmines
lab/2d/.kra/: Testing.kra-autosave.kra
lab/3d/blender/: Testing.blend  Testing.blend1
lab/ether-prototype/: .gitignore  ether-prototype
lab/ether-prototype/compression/: CMakeLists.txt  TODO.md
lab/ether-prototype/compression/cmake/: embed_shader.cmake
lab/ether-prototype/compression/gdextension/: CMakeLists.txt  compression.gdextension  compression_extension.cpp  compression_extension.h  register_types.cpp  register_types.h
lab/ether-prototype/compression/include/compression/: estimator.h  gpu_context.h  gpu_session.h  neural_compressor.h  neural_train_session.h  types.h
lab/ether-prototype/compression/src/: estimator.cpp  gpu_context.cpp  gpu_context_internal.h  gpu_session.cpp  neural_compressor.cpp  neural_compressor_internal.h  neural_train_session.cpp  verification.cpp
lab/ether-prototype/compression/src/cpu/: ans_cpu.cpp  ans_cpu.h  arithmetic_cpu.cpp  arithmetic_cpu.h  entropy_cpu.cpp  entropy_cpu.h  huffman_cpu.cpp  huffman_cpu.h  reference_wrappers.cpp  reference_wrappers.h
lab/ether-prototype/compression/src/gpu/: webgpu_backend.cpp  webgpu_backend.h
lab/ether-prototype/compression/src/gpu/shaders/: bigram.wgsl  entropy.wgsl  histogram.wgsl  huffman_decode.wgsl  huffman_encode.wgsl  lz_match.wgsl  nn_adam_update.wgsl  nn_bias_grad.wgsl  nn_bias_relu.wgsl  nn_embed_gather.wgsl  nn_embed_scatter.wgsl  nn_matmul.wgsl  nn_relu_mask.wgsl  nn_softmax_ce.wgsl  transform_byte_swap.wgsl  transform_delta.wgsl  transform_rotate.wgsl  transform_sub_mean.wgsl  transform_xor.wgsl
lab/ether-prototype/compression/tests/: CMakeLists.txt  bench_enwik.cpp  test_cpu_reference.cpp  test_gpu_kernels.cpp  test_gpu_verification.cpp
lab/ether-prototype/godot/ether/: icon.svg.import  project.godot  test_compression.gd  test_compression.gd.uid  test_compression.tscn  test_neural_enwik.gd  test_neural_enwik.gd.uid  test_neural_enwik.tscn
lab/ether-prototype/godot/ether/assets/3d/KayKit_Furniture_Bits_1.0_FREE/: contents.png.import  sample.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_blaster-kit_2.1/: Preview (Variation A).png.import  Preview.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_blaster-kit_2.1/Previews/: blaster-a.png.import  blaster-b.png.import  blaster-c.png.import  blaster-d.png.import  blaster-e.png.import  blaster-f.png.import  blaster-g.png.import  blaster-h.png.import  blaster-i.png.import  blaster-j.png.import  blaster-k.png.import  blaster-l.png.import  blaster-m.png.import  blaster-n.png.import  blaster-o.png.import  blaster-p.png.import  blaster-q.png.import  blaster-r.png.import  bullet-foam-thick.png.import  bullet-foam-tip-thick.png.import  bullet-foam-tip.png.import  bullet-foam.png.import  clip-large.png.import  clip-small.png.import  crate-medium.png.import  crate-small.png.import  crate-wide.png.import  grenade-a.png.import  grenade-b.png.import  scope-large-a.png.import  scope-large-b.png.import  scope-small.png.import  silencer-larger.png.import  silencer-small.png.import  smoke.png.import  target-detail.png.import  target-fragment-large.png.import  target-fragment-small.png.import  target-large.png.import  target-small.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_blocky-characters_20/: Preview.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_blocky-characters_20/Previews/: character-a.png.import  character-b.png.import  character-c.png.import  character-d.png.import  character-e.png.import  character-f.png.import  character-g.png.import  character-h.png.import  character-i.png.import  character-j.png.import  character-k.png.import  character-l.png.import  character-m.png.import  character-n.png.import  character-o.png.import  character-p.png.import  character-q.png.import  character-r.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_conveyor-kit/: Preview (Variation A).png.import  Preview.png.import  Sample.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_conveyor-kit/Previews/: arrow-basic.png.import  arrow.png.import  box-large.png.import  box-long.png.import  box-small.png.import  box-wide.png.import  conveyor-bars-fence.png.import  conveyor-bars-high.png.import  conveyor-bars-sides.png.import  conveyor-bars-stripe-fence.png.import  conveyor-bars-stripe-high.png.import  conveyor-bars-stripe-side.png.import  conveyor-bars-stripe.png.import  conveyor-bars.png.import  conveyor-long-sides.png.import  (+46 more)
lab/ether-prototype/godot/ether/assets/3d/kenney_furniture-kit/: Preview.png.import  Sample.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_prototype-kit/: Preview (Variation A).png.import  Preview (Variation B).png.import  Preview (Variation C).png.import  Preview.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_space-kit/: Preview.png.import  Sample.png.import
lab/ether-prototype/godot/ether/assets/3d/kenney_space-station-kit/: Preview (Variation A).png.import  Preview.png.import  Sample.png.import
lab/ether-prototype/godot/ether/assets/audio/kenney_ui-audio/: Preview.ogg.import
lab/ether-prototype/godot/ether/assets/ui/kenney_board-game-icons/: Preview.png.import
lab/ether-prototype/godot/ether/assets/ui/kenney_fantasy-ui-borders/: Preview.png.import  Sample.png.import
lab/ether-prototype/godot/ether/assets/ui/kenney_input-prompts_1.4.1/: Preview Flairs & Overlays.png.import  Preview Generic.png.import  Preview Keyboard & Mouse.png.import  Preview Nintendo Gamecube.png.import  Preview Nintendo Switch 2.png.import  Preview Nintendo Switch.png.import  Preview Nintendo Wii.png.import  Preview Nintendo WiiU.png.import  Preview PlayStation Series.png.import  Preview Playdate.png.import  Preview Steam Controller.png.import  Preview Steam Deck.png.import  Preview Touch.png.import  Preview Xbox Series.png.import
lab/ether-prototype/godot/ether/assets/ui/kenney_mobile-controls/: License.txt  Preview.png.import  Sample.png.import
lab/ether-prototype/godot/ether/scenes/: Character.tscn  Spatial.tscn
(+10748 files in other folders)
